AlarmManager and Notifications implemented - receiver created to handle notifications - setting an alarm and saving the note will set an alarm with AlarmManger and interface with NotificationManager to create a notification in the status bar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,5 +18,6 @@
         <activity android:name=".PNEditNote"></activity>
         <activity android:name="com.google.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
+        <receiver android:process=":remote" android:name="PNAlarmReceiver"/>
     </application>
 </manifest>
