--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,10 @@
         <activity android:name=".PNEditNote"></activity>
         <activity android:name="com.google.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <receiver android:process=":remote" android:name="PNAlarmReceiver"/>
+        <receiver android:process=":remote" android:name="PNAlarmReceiver">
+            <intent-filter>
+                 <data android:scheme="note_id:"/>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
