--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,19 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!-- enable the search dialog to send searches to searchable activity -->
+            <meta-data android:name="android.app.default_searchable"
+                       android:value=".PNSearchActivity" />
+        </activity>
+        <activity android:name=".PNEditNote"></activity>
+        <activity android:name=".PNSearchActivity"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
             <meta-data android:name="android.app.searchable"
                        android:resource="@xml/searchable"/>
         </activity>
-        <activity android:name=".PNEditNote"></activity>
         <activity android:name="com.google.ads.AdActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <receiver android:process=":remote" android:name="PNAlarmReceiver">
