--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,15 @@
       package="com.jdroyd.prayerNotes"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8"
+              android:targetSdkVersion="11"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="PrayerNotes"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,7 +20,9 @@
             <meta-data android:name="android.app.default_searchable"
                        android:value=".PNSearchActivity" />
         </activity>
-        <activity android:name=".PNEditNote"></activity>
+        <activity android:name=".PNEditNote"
+                  android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
         <activity android:name=".PNSearchActivity"
                   android:launchMode="singleTop">
             <intent-filter>
